<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/pb_register_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/color_on_primary"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iv_register_icon_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_secondary"
        android:layout_marginTop="@dimen/margin_secondary"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_register_welcome"
        style="@style/TextHeadingPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_secondary"
        android:layout_marginTop="@dimen/margin_secondary"
        android:text="@string/welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_register_icon_back"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_register_message"
        style="@style/TextCaptionPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_secondary"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/register_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_welcome"
        app:layout_constraintVertical_bias="0.0" />

    <com.implizstudio.android.app.components.field.FormField
        android:id="@+id/ff_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_secondary"
        android:layout_marginTop="@dimen/margin_high"
        app:hint="@string/full_name"
        app:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_message"
        app:layout_constraintVertical_bias="0.0" />

    <com.implizstudio.android.app.components.field.FormField
        android:id="@+id/ff_register_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_secondary"
        android:layout_marginTop="@dimen/margin_primary"
        app:hint="@string/store_name"
        app:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ff_register_name"
        app:layout_constraintVertical_bias="0.0" />

    <com.implizstudio.android.app.components.field.FormField
        android:id="@+id/ff_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_secondary"
        android:layout_marginTop="@dimen/margin_primary"
        app:hint="@string/email"
        app:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ff_register_store"
        app:layout_constraintVertical_bias="0.0" />

    <com.implizstudio.android.app.components.field.FormField
        android:id="@+id/ff_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_secondary"
        android:layout_marginTop="@dimen/margin_primary"
        app:hint="@string/password"
        app:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ff_register_email"
        app:layout_constraintVertical_bias="0.0"
        app:passwordToggleEnabled="true" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/acb_register"
        style="@style/TextButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_secondary"
        android:layout_marginBottom="@dimen/margin_secondary"
        android:background="@drawable/bg_button_disable"
        android:enabled="false"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>