<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_started_name"
        style="@style/TextHeadingPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_secondary"
        android:layout_marginTop="@dimen/margin_secondary"
        android:text="@string/warungku"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iv_started_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_secondary"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_info"
        app:layout_constraintBottom_toBottomOf="@+id/tv_started_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_started_name"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_started"
        app:layout_constraintBottom_toTopOf="@+id/tv_started_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_started_name"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_started_message"
        style="@style/TextBodyPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_secondary"
        android:layout_marginBottom="@dimen/margin_secondary"
        android:text="@string/started_message"
        app:layout_constraintBottom_toTopOf="@+id/acb_started_goto_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/acb_started_goto_register"
        style="@style/TextButtonPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_secondary"
        android:layout_marginEnd="@dimen/margin_primary"
        android:layout_marginBottom="@dimen/margin_secondary"
        android:background="@drawable/bg_button_secondary"
        android:text="@string/register"
        android:textColor="@color/color_on_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/acb_started_goto_login"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/acb_started_goto_login"
        style="@style/TextButtonPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_primary"
        android:layout_marginEnd="@dimen/margin_secondary"
        android:layout_marginBottom="@dimen/margin_secondary"
        android:background="@drawable/bg_button_primary"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/acb_started_goto_register"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>