<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/pb_verification_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/color_on_primary"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iv_verification_icon_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_secondary"
        android:layout_marginTop="@dimen/margin_secondary"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_verification_title"
        style="@style/TextHeadingPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_secondary"
        android:layout_marginTop="@dimen/margin_secondary"
        android:text="@string/verification_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_verification_icon_back"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_verification_message"
        style="@style/TextCaptionPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_secondary"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/verification_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_verification_title"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/iv_verification_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_verification"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_verification_message"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_verification_info"
        style="@style/TextBodyPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_secondary"
        android:text="@string/verification_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_verification_icon"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_verification_email"
        style="@style/TextButtonPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_primary_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_verification_info"
        app:layout_constraintVertical_bias="0.0" />

    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/otv_verification"
        style="@style/TextHeadingPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color_primary_text"
        app:layout_constraintBottom_toTopOf="@+id/acb_verification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_verification_info"
        app:length="6"
        app:otp_box_background="@drawable/bg_box_primary" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/acb_verification"
        style="@style/TextButtonPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_secondary"
        android:layout_marginBottom="@dimen/margin_secondary"
        android:background="@drawable/bg_button_disable"
        android:enabled="false"
        android:text="@string/verification"
        app:layout_constraintBottom_toTopOf="@+id/ll_verification_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/ll_verification_footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_secondary"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            style="@style/TextCaptionPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verification_not_receive_code" />

        <TextView
            android:id="@+id/tv_verification_resending"
            style="@style/TextCaptionPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/resending"
            android:textColor="@color/color_on_primary" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>